k8s/booklibrary-loadbalancer-deployment.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: booklibrary
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: booklibrary
    spec:
      containers:
      - name: booklibrary
        image: joergjo/booklibrary-netcore:latest
        ports:
        - containerPort: 80
          name: http
        volumeMounts:
          - name: secrets-volume
            mountPath: /app/secrets
            readOnly: true
        resources:
          requests:
            memory: "256Mi"
            cpu: "500m"
          limits:
            memory: "512Mi"
            cpu: "1000m"
      volumes:
        - name: secrets-volume
          secret:
            secretName: booklibrary-secrets
---
apiVersion: v1
kind: Service
metadata:
  name: booklibrary-lb-svc
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: http
  selector:
    app: booklibrary
