k8s/booklibrary-loadbalancer-svc.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: booklibrary
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: booklibrary
    spec:
      containers:
      - name: booklibrary
        image: joergjo/booklibrary-netcore:latest
        ports:
        - containerPort: 80
        volumeMounts:
          - name: secrets-volume
            mountPath: /app/secrets
            readOnly: true
      volumes:
        - name: secrets-volume
          secret:
            secretName: booklibrary-secrets
---
apiVersion: v1
kind: Service
metadata:
  name: booklibrary-lb-svc
spec:
  type: LoadBalancer
  ports:
    - port: 80
  selector:
    app: booklibrary
