k8s/booklibrary-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: booklibrary
  annotations:    
    kubernetes.io/ingress.class: nginx
    ingress.kubernetes.io/rewrite-target: /
    ingress.kubernetes.io/add-base-url: "true"
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /booklibrary
        backend:
          serviceName: booklibrary-svc
          servicePort: 80
